--- a/style.css
+++ b/style.css
@@ -41,6 +41,11 @@ body{
     justify-content: space-between;
     align-items: center;
     z-index: 100;
+    transition: .3s;
+}
+
+.header.sticky{
+    background: var(--bg-color);
 }
 
 .logo{
@@ -238,7 +243,7 @@ section {
     flex-direction: column;
     gap: 2rem;
     background: var(--second-bg-color);
-    padding-bottom: 6rem;
+    padding-bottom: 7rem;
 }
 
 .heading{
@@ -299,11 +304,25 @@ span{
     gap: 23rem;
     margin-top: 1rem;
 }
+.names-containers {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 18rem;
+    margin-top: .1rem;
+    margin-left: -1.9rem;
+}
 
 .names-container p {
     font-size: 3rem;
     font-weight: bold;
     color: var(--main-color);
+}
+
+.names-containers h3 {
+    font-size: 2rem;
+    font-weight: bold;
+    color: var(--text-color);
 }
 
 .about-content{
@@ -415,4 +434,229 @@ span{
 .roadmap-content .content p {
     font-size: 1.6 rem;
     padding-top: .5rem ;
+}
+
+.projects{
+    min-height: auto;
+    padding-bottom: 7rem;
+    background: var(--second-bg-color);
+}
+
+.projects .projects-row{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5rem;
+}
+
+.projects-row .projects-column{
+    flex: 1 1 40rem;
+}
+
+.projects-column .title{
+    font-size: 2.5rem;
+    margin: 0 0 1.5rem;
+}
+
+.projects-box .project-content{
+    position: relative;
+    border: .2rem solid var(--main-color);
+    border-radius: .6rem;
+    padding: .5rem 1.5rem;
+    z-index: 1;
+    overflow: hidden;
+}
+.projects-box .project-content::before{
+content: '';
+position: absolute;
+top: 0;
+left: 0;
+width: 0;
+height: 100%;
+background: var(--bg-color);
+z-index: -1;
+transition: .5s;
+}
+
+.projects-box .project-content:hover::before{
+    width: 100%;
+}
+
+.project-content .progress{
+    padding: 1rem 0;
+}
+
+.project-content .progress h3{
+    font-size: 1.7rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.project-content .progress h3 span{
+    color: var(--text-color);
+}
+
+.project-content .progress .bar{
+    height: 2.5rem;
+    border-radius: .6rem;
+    border: .2rem solid var(--main-color);
+    padding: .5rem;
+    margin: 1rem 0;
+}
+
+.project-content .progress .bar span{
+    display: block;
+    height: 100%;
+    border-radius: .3rem;
+    background: var(--main-color);
+}
+
+.projects-column:nth-child(1) .project-content .progress:nth-child(1) .bar span{
+    width: 100%;
+}
+.projects-column:nth-child(1) .project-content .progress:nth-child(2) .bar span{
+    width: 70%;
+}
+.projects-column:nth-child(1) .project-content .progress:nth-child(3) .bar span{
+    width: 0%;
+}
+
+.projects-column:nth-child(2) .project-content .progress:nth-child(1) .bar span{
+    width: 80%;
+}
+.projects-column:nth-child(2) .project-content .progress:nth-child(2) .bar span{
+    width: 30%;
+}
+.projects-column:nth-child(2) .project-content .progress:nth-child(3) .bar span{
+    width: 0%;
+}
+
+.projects-column:nth-child(3) .project-content .progress:nth-child(1) .bar span{
+    width: 100%;
+}
+.projects-column:nth-child(3) .project-content .progress:nth-child(2) .bar span{
+    width: 0%;
+}
+.projects-column:nth-child(3) .project-content .progress:nth-child(3) .bar span{
+    width: 0%;
+}
+
+.contact{
+    min-height: auto;
+    padding-bottom: 7rem;
+}
+
+.contact form{
+    max-width: 70rem;
+    margin: 0 auto;
+    text-align: center;
+}
+.contact form .inputbox{
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.contact form .inputbox .input-field{
+    position: relative;
+    width: 49%;
+    margin: .8rem 0;
+}
+
+.contact form .inputbox .input-field input,
+.contact form .textarea-field textarea{
+    width: 100%;
+    height: 100%;
+    padding: 1.5rem;
+    font-size: 1.6rem;
+    color: var(--text-color);
+    background: transparent;
+    border-radius: .6rem;
+    border: .2rem solid var(--main-color);
+}
+
+.contact form .inputbox .input-field input::placeholder,
+.contact form .textarea-field textarea::placeholder{
+    color: var(--text-color);
+}
+
+.contact form .focus{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;   
+    height: 100%;
+    background: var(--second-bg-color);
+    border-radius: .6rem;
+    z-index: -1;
+    transition: .5s;
+}
+
+.contact form .inputbox .input-field input:focus~.focus,
+.contact form .inputbox .input-field input:valid~.focus,
+.contact form .textarea-field textarea:focus~.focus,
+.contact form .textarea-field textarea:valid~.focus{
+    width: 100%; 
+}
+
+.contact form .textarea-field{
+    position: relative;
+    margin: .8rem 0 2.7rem;
+    display: flex;
+}
+
+.contact form .textarea-field textarea{
+    resize: none;
+}
+
+.contact form .btn-box.btns .btn{
+    cursor: pointer;
+}
+.footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 2rem 9%;
+    justify-content: right;
+
+}
+.footer-iconTop a{
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: .8rem;
+    background: var(--main-color);
+    border: .2rem solid var(--main-color);
+    border-radius: .6rem;
+    z-index: 1;
+    overflow: hidden;
+    
+}
+
+.footer-iconTop a i{
+    font-size: 3rem;
+    color: var(--bg-color);
+}
+
+.footer-iconTop a::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: var(--bg-color);
+    z-index: -1;
+    transition: .5s;
+}
+
+.footer-iconTop a:hover::before{
+width: 100%;
+}
+
+
+
+.footer-iconTop a:hover i{
+    color: var(--main-color);
 }
